# consolebuffer

./: .gitignore  CMakeLists.txt  README.md
src/: consolebuffer-ORIGINAL.hpp  consolebuffer.hpp  consolebufferu8.hpp
test/: BORRAME.cpp  benchmark_80x20.cpp  benchmark_triple.cpp  benchmark_triple_utf8.cpp  test_2d_buffer.cpp
